<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".TelaFeedback">

    <EditText
        android:id="@+id/destinatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/email_jornal" />
    <EditText
        android:id="@+id/assunto"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assunto"
        />
    <EditText
        android:id="@+id/mesangem"
        android:inputType="text"
        android:layout_width="match_parent"
        android:minHeight="200dp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:hint="@string/mensagem"
        />

    <Button
        android:id="@+id/btnEnviarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:width="200dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/azul_principal"
        android:text="@string/enviar_email" />

</LinearLayout>