<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaMenuPrincipal">

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/homem_silhueta"
        android:drawingCacheQuality="auto"
        android:paddingLeft="30dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/menu_perfil"
        android:textColor="@color/azul_principal"
        app:backgroundTint="#FFFFFF"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnNoticiasRecentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/noticias_recentes_img"
        android:text="@string/menu_recentes"
        android:textColor="@color/azul_principal"
        android:paddingLeft="30dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerfil"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnEscolherAssunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/escolher_assunto"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/menu_escolha_assunto"
        android:textColor="@color/azul_principal"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNoticiasRecentes"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/email"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/feedback"
        android:textColor="@color/azul_principal"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscolherAssunto"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnLocalizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/localizacao_usuario"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/localização"
        android:textColor="@color/azul_principal"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFeedback"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="350dp"
        android:drawableLeft="@drawable/temperatura"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="60dp"
        android:paddingBottom="10dp"
        android:text="@string/temperatura"
        android:textColor="@color/azul_principal"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocalizacao"
        app:strokeColor="@color/azul_principal"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>